--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Roboto', sans-serif;
-    color: var(--blackcolor);
+    color: #fff;
     background-color: #162831;
     font-size: 14px;
     letter-spacing: 0.03em;
@@ -41,4 +41,15 @@ img {
 .nav-flex{
     display: flex;
     align-items: center;
+}
+.site-nav {
+    display: flex;
+    margin-left: 93px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+}
+.site-nav .item+.item {
+    margin-left: 50px;
 }
